--- a/gallery.html
+++ b/gallery.html
@@ -17,15 +17,15 @@
                 <h1><a href="index.html"><img class="logo" src="images/logo.png" alt="ロゴ"></a></h1>
                 <nav>
                     <li><a href="intro.html">BASIC INFO</a></li>
-                    <li><a href="#">GALLERY</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="gallery.html">GALLERY</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </nav>
             </header>
         
             <div class="gallery-content">
                 <div id="references">
                     <a href="https://hikari-jane.github.io/Hikari/index.html"><img src="images/site_1.png" alt="reference1"></a>
-                    <a href="#"><img src="images/site_2.png" alt="reference2"></a>
+                    <a href="https://hikari-jane.github.io/Hikari2/"><img src="images/site_2.png" alt="reference2"></a>
                 </div>
             </div>
         </div>
