--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <nav>
                     <li><a href="intro.html">BASIC INFO</a></li>
                     <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </nav>
             </header>
         
