--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,7 @@
                     <a href="https://hikari-jane.github.io/Hikari/index.html"><img src="images/site_1.png" alt="reference1"></a>
                     <a href="https://hikari-jane.github.io/Hikari2/"><img src="images/site_2.png" alt="reference2"></a>
                     <a href="https://hikari-jane.github.io/Hikari3/"><img src="images/site_3.png" alt="reference3"></a>
+                    <a href="https://hikari-jane.github.io/Hikari4/"><img src="images/site_4.png" alt="reference4"></a>
                 </div>
             </div>
         </div>
