--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,7 @@
                     <a href="https://hikari-jane.github.io/Hikari2/"><img src="images/site_2.png" alt="reference2"></a>
                     <a href="https://hikari-jane.github.io/Hikari3/"><img src="images/site_3.png" alt="reference3"></a>
                     <a href="https://hikari-jane.github.io/Hikari4/"><img src="images/site_4.png" alt="reference4"></a>
+                    <a href="https://hikari-jane.github.io/Hikari5/"><img src="images/site_5.png" alt="reference5"></a>
                 </div>
             </div>
         </div>
